fix(myintersectionobserver): fix video indicator visibility

--- a/src/content.css
+++ b/src/content.css
@@ -30,13 +30,14 @@
 }
 
 .can-video-expand {
-  height: 20px;
+  height: 50px;
   position: absolute;
 
   display: flex;
   justify-content: center;
 
   margin-top: -80px;
+
 }
 
 .can-video-expand span {
